Fri Aug 13 10:21:28 1999  Nick Clifton  <nickc@cygnus.com>

	* toplev.c (rest_of_compilation): Allow machine dependent
	reorganisation pass to place information into the RTL dump
	file if it so wishes.

Sun Aug 15 12:41:21 1999  Jim Wilson  <wilson@cygnus.com>

	* explow.c (hard_function_value): Use VOIDmode instead of
	MAX_MACHINE_MODE.
	* stmt.c (expand_return): Likewise.
	* stor-layout.c (get_best_mode): Likewise.
	
	* genemit.c (gen_expand): If next is MATCH_PAR_DUP, then output
	emit call instead of emit_insn call.

Sat Aug 14 15:04:06 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* configure.in: Handle --disable/enable-win32-registry.
	* install.texi: Document --disable/enable-win32-registry.
	* acconfig.h (ENABLE_WIN32_REGISTRY): New macro.
	(WIN32_REGISTRY_KEY): New macro.
	* prefix.c: Use to enable/disable win32-specific code.
	(lookup_key): Use versioned key.
	* configure: Regenerate.
	* config.in: Likewise.

Fri Aug 13 17:41:55 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* cpplib.c (read_line_number): New fn, split out of...
	(do_line): Here.

Fri Aug 13 14:18:27 1999  Gavin Romig-Koch  <gavin@cygnus.com>

	tree.c (lang_unsave_expr_now) : New.
	(unsave_expr_now): Call lang_unsave_expr_now.
	tree.h (lang_unsave_expr_now) : New.

Fri Aug 13 00:49:46 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* toplev.c (flag_new_exceptions): On by default.

1999-08-13  Michael Meissner  <meissner@cygnus.com>

	* Makefile.in (GCC_FOR_TARGET): Move -B./ after the tooldir -B.

Fri Aug 13 01:29:57 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* dwarfout.c (fundamental_type_code): Return FT_boolean for
	INTEGER_TYPE with precision==1, it's __java_boolean.  

Thu Aug 12 23:51:04 1999  J"orn Rennecke <amylaar@cygnus.co.uk>

	* global.c (prune_preferences): Move some invariants out of the
	inner loop.

Thu Aug 12 15:30:29 1999  Jesse Perry  (jap@unx.dec.com)

	* configure.in (alpha*-dec-osf*): Add osf5.

Sun Aug  1 22:24:03 1999  Philip Blundell  <philb@gnu.org>
