@@ -1,3 +1,7 @@
+Fri Aug 13 15:20:43 1999  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* config/i386/freebsd.h (HANDLE_PRAGMA_PACK_PUSH_POP): Define.
+
 Fri Aug 13 10:21:28 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* toplev.c (rest_of_compilation): Allow machine dependent
